fix text on narrow screens, brought new header from allure-core

--- a/less/app.less
+++ b/less/app.less
@@ -9,14 +9,32 @@
 @import "features";
 @import "xunit";
 
-.b-page__nav .navbar-header {
-  .allure-logo {
-    background: url(../img/allure-logo.png) 10px center no-repeat;
-    font-size: 1.4em;
-    padding-left: 55px;
-    font-weight: bold;
-    &, &:hover {
-      color: #333
+.b-page__nav {
+  min-width: 850px;
+  .navbar-header {
+    width: 138px;
+    float: left;
+    .allure-logo {
+      background: url(../img/allure-logo.png) 10px center no-repeat;
+      font-size: 1.4em;
+      padding-left: 55px;
+      font-weight: bold;
+      &, &:hover {
+        color: #333
+      }
+    }
+  }
+  .navbar-text {
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+  .navbar-right {
+    float: right;
+  }
+  .navbar-nav {
+    margin: 0;
+    li {
+      float: left;
     }
   }
 }
@@ -86,6 +104,10 @@
     left: 1px;
     bottom: 20px;
     right: 20px;
+    & > .text {
+        max-width: 1170px;
+        padding: 0 30px;
+    }
   }
   .tab-blank {
     left: 1px;
